# moai-examples

./: .gitignore  .isort.cfg  .style.yapf  README.md  pyproject.toml  requirements.txt  run_internlm.sh  train.py  train_internlm.py  train_th.py  utils.py
.github/: pull_request_template.md
finetuning_codes/: config.yaml  requirements.txt  train.py  train_internlm.py  train_qwen.py  utils.py
finetuning_codes/requirements/: requirements_qwen.txt
finetuning_codes/scripts/: train_baichuan.sh  train_baichuan_2.sh  train_chatglm.sh  train_dolly_v2_12b.sh  train_gemma.sh  train_internlm.sh  train_internlm_test.sh  train_internlm_trainer.sh  train_llama2_13b.sh  train_llama2_70b.sh  train_llama2_7b.sh  train_llama3_70b.sh  train_llama3_70b_lora.sh  train_llama3_8b.sh  train_llama_30b.sh  train_llama_70b.sh  train_llama_70b_lora.sh  train_llama_8b.sh  train_mistral_7b.sh  train_qwen.sh  train_qwen2.sh  train_qwen2_72b.sh  train_qwen_14b.sh  train_qwen_72b.sh  train_qwen_trainer.sh
git-hooks/: README.md  pre-commit-config-for-yapf-and-isort.yaml  pre-commit-config.yaml
inference_codes/: README.md  agent_client.py  benchmark_client.py  chat.py  client_utils.py  prompt.txt  requirements.txt
inference_codes/.ambre/: current_model_config.yaml  server_config.yaml
inference_codes/.backup_logs/: ambre_TCO_Meta-Llama-3-70B-Instruct_1024_1.json  ambre_TCO_Meta-Llama-3-70B-Instruct_200_1.json
inference_codes/scripts/: benchmark_baichuan_max_batch.sh  change_model.sh  (+5 more)
model/: modeling_llama.py
pretrained_models/: README.md
scripts/: train_internlm.sh  train_llama_lora.sh
(+13 files in other folders)
