[project]
name = "moai-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.6.0",
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "peft==0.6.1",
    "scipy>=1.15.3",
    "sentencepiece>=0.2.0",
    "setuptools==69.5.1",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
    "torch==2.1.0+moreh25.5.3005",
    "torchaudio==2.1.0+cpu",
    "torchvision==0.16.0+cpu",
    "transformers==4.50.3",
    "transformers-stream-generator>=0.0.5",
    "trl==0.16.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "http://artifact.artifact.svc.cluster.local/whl/ucx1.14.1/"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/"
